[+] PROJET TOTALLY COMPLETE

--- a/wordpress/wp-content/themes/theme-enfant/theme.css
+++ b/wordpress/wp-content/themes/theme-enfant/theme.css
@@ -16,15 +16,20 @@ body {
     flex: 1;
     min-height: 100vh;
     justify-content: center;
-  
+
 
 }
 
+#menu-navigation ul {
+    flex-direction: row-reverse;
+}
 
 .infos {
     display: inline;
 }
-#site-title, #menu-item-1060 {
+
+#site-title,
+#menu-item-1060 {
     display: none;
 }
 
@@ -52,6 +57,10 @@ h1.entry-title {
     display: none;
 }
 
+header.header {
+    display: none;
+}
+
 .presentation {
     border-radius: 0px 0px 30px 0px;
 }
@@ -65,9 +74,7 @@ h2.has-background {
     padding: 0;
 }
 
-h4.has-background {
-    padding: 2;
-}
+
 h1.commander {
     width: 100%;
 }
@@ -86,41 +93,32 @@ h2.panier {
     padding-top: 15px;
 }
 
-.accueil {
-    background-image: url('assets/Group 4.png');
-}
 
 .canette figure {
     width: 100%;
 }
 
-.quantity  {
-   width: 29px;
-   height: 56px;
-   font-family: 'Inter' sans-serif ;
-   align-items: center;
-   justify-content: center;
-   margin: 0;
+.quantity {
+    width: 29px;
+    height: 56px;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
 }
 
 
 .infos {
     justify-content: space-between;
 }
+
 .form-contact {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+    background-image: url('../../../../assets/Group 16.png');
+    background-repeat: no-repeat;
+    background-position: 39% 90%;
 
-.form-delivery form {
-    display: flex;
-    flex-wrap: wrap;
-
-}
-.form-delivery form {
-    justify-content: center;
-    align-items: center;
 }
 
 form label {
@@ -132,7 +130,8 @@ form label {
 }
 
 
-form input, input[type="text"] {
+form input,
+input[type="text"] {
     border: none;
     height: 71px;
     width: 383px;
@@ -145,13 +144,9 @@ form textarea {
     border: none;
     border-radius: 7px;
     margin-top: 10px;
-    width: 383px;    
+    width: 383px;
 }
 
-.form-delivery .col-left {
-    flex: 1;
-    margin-right: 50px; 
-}
 
 input[type="submit"] {
     background-color: #E0B9B4;
@@ -175,8 +170,8 @@ footer {
 footer a {
     text-decoration: none;
     color: black;
-    
-    
+
+
 }
 
 #footer {
@@ -189,11 +184,11 @@ footer a {
 
 
 
-.is-style-fill a  {
-   height: 55px;
-   width: 198px;
-   text-align: center;
-  padding-top: 20px;
+.is-style-fill a {
+    height: 55px;
+    width: 198px;
+    text-align: center;
+    padding-top: 20px;
 }
 
 
@@ -227,25 +222,26 @@ footer a {
 
 
 .accueil img {
-    margin-left:  0px;
+    margin-left: 0px;
 }
 
 
-/*FORMAT TABLETTE ET BUREAU*/
-@media (min-width: 769px){
-    
+/*FORMAT  BUREAU*/
+@media (min-width: 1025px) {
+
     nav {
         justify-content: space-between;
         display: flex;
-        
+
     }
 
 
-   
+
     .canette img {
         width: 100%;
         margin-left: 0px;
     }
+
     h2.nous-rencontrer {
         font-size: 36px;
         font-weight: 800;
@@ -253,13 +249,13 @@ footer a {
 
 
     .panier img {
-      width: 180px;
+        width: 180px;
     }
 
-  
-   
-   
- 
+
+
+
+
     nav img {
         width: 200px;
         margin-left: 30px;
@@ -294,15 +290,18 @@ footer a {
 
 
     }
+
     nav ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
         display: flex;
-        flex-direction: row-reverse; /* Inversion de l'ordre des éléments */
-        align-items: center; /* Pour centrer les éléments verticalement si nécessaire */
-      }
-    
+        flex-direction: row-reverse;
+        /* Inversion de l'ordre des éléments */
+        align-items: center;
+        /* Pour centrer les éléments verticalement si nécessaire */
+    }
+
 
 
     .navigation a {
@@ -324,9 +323,10 @@ footer a {
 
 
     #menu-item-9 a {
-       margin-right: 200px;
+        margin-right: 200px;
 
     }
+
     #menu-item-10 li {
         width: 236px;
 
@@ -338,7 +338,8 @@ footer a {
         align-items: center;
     }
 
-    form input, input[type="text"] {
+    form input,
+    input[type="text"] {
         border: none;
         height: 71px;
         width: 383px;
@@ -346,82 +347,146 @@ footer a {
         margin-bottom: 25px;
         margin-top: 10px;
     }
-    .form-delivery .col-left {
-        flex: 1;
-        margin-right: 10px; 
+
+   
+
+    .personnel {
+        background-image: url('../../../../assets/Group\ 4.png');
+        background-repeat: no-repeat;
+        background-size: 60%;
+        background-position: 80% 110%;
+
     }
-    
+
     form textarea {
         border: none;
         border-radius: 7px;
         margin-top: 10px;
-        width: 383px;    
+        width: 383px;
     }
-    
+
     input[type="submit"] {
         background-color: #E0B9B4;
         color: white;
         font-size: 15px;
         font-weight: 400;
         border-radius: 7px;
-   
+
         height: 55px;
         text-align: center;
-    
+
     }
 
+    .form-delivery form {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin-left: 14%;
+        width: 70%;
+    }
+    .form-delivery form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+   
+    
+    .form-delivery {
+        flex: 1;
+    }
+    
+    .colonne1 {
+        border-left: solid 3px white;
+        margin-left: 60px;
+        padding-left: 60px;
+    }
+  
+  
 
-.form-delivery form input {
-    margin-right: 100px;
+
+  
+
+    .wpcf7-form .form-delivery input[type="text"] {
+        margin-bottom: 10px;
+    }
+
+    form.wpcf7-form .form-delivery .col-right {
+        flex: 1;
+    }
+
+    form.wpcf7-form .form-delivery .wpcf7-submit {
+        width: 100%;
+        margin: 20px auto;
+    }
+
 }
 
 
- .form-delivery .col-left {
-    flex: 1;
-    margin-right: 50px; 
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*TABLETTE*/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .infos-livraison {
+        display: inline;
+    }
+
+    .infos-livraison h2 {
+        margin-right: 20px;
+    }
+    
+    .wp-block-column-add-is-layout-flow-wp-block-column-is-layout-flow {
+        flex-basis: 15%;
+    }
+    .form-delivery form {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 70% ;
+        margin-left: 14%;
+
+    }
+   
+   
+    .form-delivery {
+        flex: 1;
+    }
+    
+   
+  
+    form input,
+    input[type="text"] {
+        border: none;
+        height: 71px;
+        width: 313px;
+        border-radius: 7px;
+        margin-bottom: 25px;
+        margin-top: 10px;
+    }
+
 }
 
-.wpcf7-form .form-delivery input[type="text"] {
-    margin-bottom: 10px; 
-}
-form.wpcf7-form .form-delivery .col-right {
-    flex: 1;
-}
-
-form.wpcf7-form .form-delivery .wpcf7-submit {
-    width: 100%; 
- margin: 20px auto;
-}
-
-}
 
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*TABLETTE ET MOBILE*/
-
-@media (max-width: 768px) {
+/*MOBILE*/
+@media (min-width:320px) and (max-width: 767px) {
 
 
     /*NAVBAR*/
@@ -440,7 +505,8 @@ form.wpcf7-form .form-delivery .wpcf7-submit {
     }
     .panier img {
         width: 180px;
-      }
+    }
+
     .canette img {
         width: 100%;
         margin-left: 0px;
@@ -501,39 +567,44 @@ form.wpcf7-form .form-delivery .wpcf7-submit {
         font-size: 20px;
 
     }
+
     .panier h2 {
         text-align: center;
     }
+
     h2.nous-rencontrer {
         font-size: 20px;
         font-weight: 800;
     }
+
     .infos {
         justify-content: space-between;
     }
+
     .form-contact {
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
-    form input, input[type="text"] {
+    form input,
+    input[type="text"] {
         border: none;
         height: 71px;
-       width: 283px;
+        width: 283px;
         border-radius: 7px;
         margin-bottom: 25px;
         margin-top: 10px;
     }
-    
+
     form textarea {
         border: none;
         border-radius: 7px;
         width: 283px;
 
-        max-width: 100%;   
+        max-width: 100%;
     }
-    
+
     input[type="submit"] {
         background-color: #E0B9B4;
         color: white;
@@ -543,14 +614,30 @@ form.wpcf7-form .form-delivery .wpcf7-submit {
 
         height: 55px;
         text-align: center;
-   
-     
+
+
     }
 
+    .form-delivery form {
+        display: flex
+        ;
+        flex-direction: column;
+        align-items: center;
+        align-self: center;
+        justify-content: center;
+   
 
- 
+    }
+
+    
+    
     
   
-    }
-  
-   
+    
+    
+
+
+
+
+
+}
