--- a/wordpress/wp-content/themes/theme-enfant/theme.css
+++ b/wordpress/wp-content/themes/theme-enfant/theme.css
@@ -24,6 +24,10 @@ body {
     flex-direction: row-reverse;
 }
 
+.navigation li:nth-child(2) {
+    order: 1;
+  }
+  
 .infos {
     display: inline;
 }
@@ -121,6 +125,9 @@ h2.panier {
 
 }
 
+.form-contact form {
+    margin: 0 auto;
+}
 form label {
     color: white;
 }
@@ -514,8 +521,22 @@ input[type="submit"] {
         width: 180px;
     }
 
+    .wp-block-cover .wp-block-cover__image-background, .wp-block-cover video.wp-block-cover__video-background, .wp-block-cover-image .wp-block-cover__image-background, .wp-block-cover-image video.wp-block-cover__video-background {
+        width: 350px;
+        margin: 0 auto;
+    }
 
+    .wp-block-heading.has-text-align-center.panier {
+        width: 30px;
+        margin: 0 auto;
+    }
+   
 
+    p.has-text-align-center.titre-fruit {
+   
+        width: 350px;
+        margin: 0 auto;
+    }
 
 
     nav img {
@@ -617,8 +638,6 @@ input[type="submit"] {
     .form-delivery form {
         display: flex;
        flex-direction: column;
-    
-
     }
 
     .wpcf7-form-control.wpcf7-submit.has-spinner.commande {
@@ -632,6 +651,11 @@ input[type="submit"] {
         flex: 1;
     }
     
+    .form-contact form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
    
   
     form input,
@@ -665,6 +689,18 @@ input[type="submit"] {
     border-radius: 7px;
     margin-top: 10px;
     width: 383px;
+}
+ 
+.wp-block-columns.is-layout-flex.wp-container-core-columns-layout-6.wp-block-columns-is-layout-flex,
+.wp-block-columns.is-layout-flex.wp-container-core-columns-layout-5.wp-block-columns-is-layout-flex,
+.wp-block-columns.is-layout-flex.wp-container-core-columns-layout-7.wp-block-columns-is-layout-flex,
+.wp-block-columns.is-layout-flex.wp-container-core-columns-layout-8.wp-block-columns-is-layout-flex
+
+
+
+  {
+    width: 28px;
+    margin: 0 auto;
 }
 
 }
@@ -700,6 +736,7 @@ input[type="submit"] {
     .canette img {
         width: 100%;
         margin-left: 0px;
+        object-fit: contain;
     }
 
     .navigation {
@@ -738,8 +775,8 @@ input[type="submit"] {
 
 
     #menu-item-10 a {
-        color: white;
-        background-color: #DC9F96;
+  
+       
         align-items: center;
     }
 
@@ -783,8 +820,9 @@ input[type="submit"] {
     
  
 
-    .form-contact {
+    .form-contact form {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
     }
@@ -799,11 +837,10 @@ input[type="submit"] {
         margin-top: 10px;
     }
 
-    form textarea {
+    .form-contact textarea {
         border: none;
         border-radius: 7px;
         width: 283px;
-
         max-width: 100%;
     }
 
@@ -813,10 +850,9 @@ input[type="submit"] {
         font-size: 15px;
         font-weight: 400;
         border-radius: 7px;
-
         height: 55px;
         text-align: center;
-
+    
 
     }
 
@@ -837,12 +873,41 @@ input[type="submit"] {
         width: 190px;
     }
    
-
+    .wpcf7-form-control.wpcf7-submit.has-spinner.bouton {
+margin: 0 auto;
+display: block;}
     
     
     
   
+    .wp-block-cover .wp-block-cover__image-background, .wp-block-cover video.wp-block-cover__video-background, .wp-block-cover-image .wp-block-cover__image-background, .wp-block-cover-image video.wp-block-cover__video-background {
+        width: 290px;
+        margin: 0 auto;
+    }
+
+    .wp-block-heading.has-text-align-center.panier {
+        width: 30px;
+        margin: 0 auto;
+    }
+   
+
+    p.has-text-align-center.titre-fruit {
+   
+        width: 200px;
+        margin: 0 auto;
+    }
     
+    .wp-block-columns.is-layout-flex.wp-container-core-columns-layout-6.wp-block-columns-is-layout-flex,
+    .wp-block-columns.is-layout-flex.wp-container-core-columns-layout-5.wp-block-columns-is-layout-flex,
+    .wp-block-columns.is-layout-flex.wp-container-core-columns-layout-7.wp-block-columns-is-layout-flex,
+    .wp-block-columns.is-layout-flex.wp-container-core-columns-layout-8.wp-block-columns-is-layout-flex
+
+
+
+      {
+        width: 28px;
+        margin: 0 auto;
+    }
     
 
 
