--- a/wordpress/wp-content/themes/theme-enfant/theme.css
+++ b/wordpress/wp-content/themes/theme-enfant/theme.css
@@ -316,6 +316,8 @@ footer a {
     .navigation li {
         display: inline;
         font-weight: 700;
+
+
     }
 
     h1 {
@@ -633,7 +635,7 @@ input[type="submit"] {
     }
 
 
-    .form-delivery form {
+    .form-delivery form, .form-contact form {
         display: flex;
        flex-direction: column;
     }
@@ -687,18 +689,6 @@ input[type="submit"] {
     border-radius: 7px;
     margin-top: 10px;
     width: 383px;
-}
- 
-.wp-block-columns.is-layout-flex.wp-container-core-columns-layout-6.wp-block-columns-is-layout-flex,
-.wp-block-columns.is-layout-flex.wp-container-core-columns-layout-5.wp-block-columns-is-layout-flex,
-.wp-block-columns.is-layout-flex.wp-container-core-columns-layout-7.wp-block-columns-is-layout-flex,
-.wp-block-columns.is-layout-flex.wp-container-core-columns-layout-8.wp-block-columns-is-layout-flex
-
-
-
-  {
-    width: 28px;
-    margin: 0 auto;
 }
 
 }
@@ -895,19 +885,7 @@ display: block;}
         margin: 0 auto;
     }
     
-    .wp-block-columns.is-layout-flex.wp-container-core-columns-layout-6.wp-block-columns-is-layout-flex,
-    .wp-block-columns.is-layout-flex.wp-container-core-columns-layout-5.wp-block-columns-is-layout-flex,
-    .wp-block-columns.is-layout-flex.wp-container-core-columns-layout-7.wp-block-columns-is-layout-flex,
-    .wp-block-columns.is-layout-flex.wp-container-core-columns-layout-8.wp-block-columns-is-layout-flex
-
-
-
-      {
-        width: 28px;
-        margin: 0 auto;
-    }
-    
-
+  
 
 
 
